<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_now_playing"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="study.pmoreira.project4.activity.NowPlayingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            style="@style/subtitle_textview"
            android:layout_width="match_parent"
            android:text="@string/now_playing_subtitle" />

        <TextView
            style="@style/explanation_textview"
            android:layout_marginBottom="@dimen/default_margin"
            android:text="@string/explanation1" />

    </LinearLayout>


    <ImageView
        android:id="@+id/now_playing_cover_imageview"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="@dimen/default_margin"
        android:layout_weight="2"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:gravity="center"
                android:text="@string/music_initial_length" />

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:progress="7" />

            <TextView
                android:id="@+id/music_length_textview"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <ImageButton
                style="@style/control_button"
                android:src="@drawable/ic_skip_previous_black_48dp" />

            <ImageButton
                style="@style/control_button"
                android:src="@drawable/ic_play_circle_outline_black_48dp" />

            <ImageButton
                style="@style/control_button"
                android:src="@drawable/ic_skip_next_black_48dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
